--- a/software/web-preact/src/style.scss
+++ b/software/web-preact/src/style.scss
@@ -71,18 +71,30 @@ input:focus-visible {
   outline: none;
 }
 
-button {
+button, .btn {
   background-color: var(--bg-dark);
   color: var(--text-white);
   border: none;
   padding: 6px;
   border-radius: 0;
   cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
 }
 
-button:disabled {
+a {
+    text-align: center;
+    text-decoration: none;
+}
+
+button:disabled, .btn.disabled {
   background-color: var(--disabled);
   cursor: not-allowed;
+  opacity: 50%;
+  pointer-events: none;
+}
+
+form.disabled {
   opacity: 50%;
 }
 
